fix some bugs after overflow check

--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -44,9 +44,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    gap: 0;
+    justify-content: flex-start;
+    gap: 80px;
   }
 }
 
