--- a/source/styles/blocks/main-footer.scss
+++ b/source/styles/blocks/main-footer.scss
@@ -8,7 +8,7 @@
   width: $mobile-container-width;
   margin: 0 auto;
   padding: 40px 0;
-  gap: 40px;
+  gap: 19px;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
@@ -28,29 +28,12 @@
   height: 25px;
 }
 
-@media (max-width: $mobile-width-max) {
-  .main-footer__social-list::after {
-    content: "";
-    position: absolute;
-    display: block;
-    transform: translateY(30px);
+.main-footer__social-list {
+  @media (max-width: $mobile-width-max) {
+    padding: 20px 50px;
 
-    width: $mobile-container-width;
-    height: 1px;
-
-    background-color: #d9d9d9;
-  }
-
-  .main-footer__social-list::before {
-    content: "";
-    position: absolute;
-    display: block;
-    transform: translateY(-32px);
-
-    width: $mobile-container-width;
-    height: 1px;
-
-    background-color: #d9d9d9;
+    border-top: 1px solid  #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
   }
 }
 
