--- a/source/styles/blocks/offer.scss
+++ b/source/styles/blocks/offer.scss
@@ -188,7 +188,6 @@
   position: relative;
   display: block;
 
-  width: 40%;
   margin-bottom: 5px;
 
   font-family: $oswald-font;
