--- a/source/styles/blocks/social-list.scss
+++ b/source/styles/blocks/social-list.scss
@@ -3,11 +3,14 @@
   flex-wrap: wrap;
   gap: 24px;
 
+  width: 100%;
   margin: 0;
   padding: 0;
+
   list-style-type: none;
 
   @media (min-width: $tablet-width) {
+    width: 200px;
     padding-left: 35px;
   }
 }
